Updated README. (This was a test.)

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repository is intended to house the Python interface for HEASoft.
+This repository will house the Python interface for HEASoft.
