Updates and typo fixes for README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This repository holds the (development) version of the heasoftpy tools.
 
-After you've cloned the repository, add the heasoftpy directory to your PYTHONPATH and import with
+After you have cloned the repository, add the heasoftpy directory to your PYTHONPATH and import with:
 
 import heasoftpy
 
@@ -14,12 +14,12 @@ heasoftpy.ftlist(infile='test.fit')
 
 -------------------------------------------------------------------------------
 
-Currently this director contains two other versions of the Python interfaces to HEAsoft. These are (for the time being) being kept for archival/reference purpose. One version generates the interfacing functions "on the fly"; in other words, at the time the function is called. This version exists in the directory named "onthefly" and is imported via:
+Currently this directory contains two other versions of the Python interfaces to HEAsoft. These are (for the time being) being kept for archival/reference purpose. One version generates the interfacing functions "on the fly"; in other words, at the time the function is called. This version exists in the directory named "onthefly" and is imported via:
 
 import heasoft.onthefly
 
 The other version generates the functions once - the first time the module is imported. This is imported via:
 
-import heasoft.writ_fns
+import heasoft.write_fns
 
-Tests are under development.
+A few tests are available in tests/test_tasks.py.
