reorganized HSPTask.noprompt and HSPTask.write_pfile to work correctly

--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This notebooks is a quick \"Getting Started\" guide. It contains a walkthough the main features of the package\n",
     "\n",
-    "The first things we need to import the `heasoftpy` package. \n",
+    "The first thing we need is to import the `heasoftpy` package. \n",
     ">The first three lines are needed in case `heasoftpy` is not installed yet. We add the folder containing `heasoftpy` to `sys.path` so we can import it.\n"
    ]
   },
