added HSPParam class and modified code to work with it. Tests work except for write_pfile to be updated

--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -50,10 +50,6 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "VERIONS:\n",
-      "-------\n",
-      "0.1: (AZ) importing and re-organizaing functionality from old code.\n",
-      "\n",
       "\n",
       "DESCRIPTION:\n",
       "-----------\n",
@@ -95,6 +91,17 @@
       "- Pass a dictionary of parameters:\n",
       ">>> params = {'infile':'input.fits', 'option':'T'}\n",
       ">>> result = hsp.ftlist(params)\n",
+      "\n",
+      "\n",
+      "All tasks take additional optional parameters:\n",
+      "- verbose: If True, print the task output to screen. Default is False\n",
+      "- noprompt: Typically, HSPTask would check the input parameters and \n",
+      "    queries any missing ones. Some tasks (e.g. pipelines) can run by using\n",
+      "    default values. Setting noprompt=True, disables checking and quering \n",
+      "    the parameters. Default is False.\n",
+      "- stderr: If True, make stderr separate from stdout. The default\n",
+      "    is False, so stderr is written to stdout.\n",
+      "\n",
       "\n",
       "\n",
       "HELP:\n",
@@ -429,16 +436,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbadde80-d93a-42c6-93d4-d7cbee2f7cff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = hsp.ftlist"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fbad497f-b6a8-43c4-9f37-8fabd904035f",
    "metadata": {},
@@ -448,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8d082c34-0fa9-44d4-98e7-94da729ea626",
    "metadata": {},
    "outputs": [],
@@ -473,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6a9baf68-843a-48fc-82c4-943a1a4a2854",
    "metadata": {
     "scrolled": true,
@@ -516,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7585a877-b4e2-41dd-93c2-0044bfa4a800",
    "metadata": {
     "scrolled": true,
@@ -578,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6d17247f-8d6b-41cb-bbcc-59d3399a3f95",
    "metadata": {
     "scrolled": true,
@@ -626,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "234090a5-34c2-41e8-9bf6-08cc2b7f027a",
    "metadata": {},
    "outputs": [
@@ -634,7 +631,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      ":: ftlist:option ::\n",
+      ":: option ::\n",
       "Print options: H C K I T  (T) >  \n"
      ]
     }
@@ -656,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c557e1a5-74bc-4dd9-947c-9fa57532f961",
    "metadata": {
     "scrolled": true,
@@ -667,6 +664,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "                   TIME           RATE          ERROR\n",
+      "                      d       counts/s       counts/s\n",
       "       1164.29445392592        18.2019        1.22564\n",
       "       1164.43056492592        16.3479        1.38458\n",
       "       1164.43167642593        17.2304        1.48210\n",
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "570efbc5-100b-420d-8cbf-234f4d00d39a",
    "metadata": {
     "scrolled": true,
@@ -718,8 +718,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "0a48f61e-2df7-4b8c-9984-760780121241",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "                   TIME           RATE          ERROR\n",
+      "                      d       counts/s       counts/s\n",
+      "       1164.29445392592        18.2019        1.22564\n",
+      "       1164.43056492592        16.3479        1.38458\n",
+      "       1164.43167642593        17.2304        1.48210\n",
+      "       1164.77686142593        14.8949        1.54721\n",
+      "       1164.85352792592        14.7539        1.32291\n",
+      "       1164.85463892593        14.2253       0.989307\n",
+      "       1164.85463892593        14.3773        1.86374\n",
+      "       1166.26056492592        19.2784        1.28549\n",
+      "       1166.26167642593        17.5375       0.767405\n",
+      "       1166.26167642593        19.7158        1.08722\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run the task\n",
+    "out = ftlist(infile='../tests/test.fits', option='T')\n",
+    "print(out.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ef4585a-b943-4aa9-b070-101d581ff068",
+   "metadata": {},
+   "source": [
+    "The parameters of the task are attributes of the `HSPTask` object (called `ftlist` here), so they can be easily modified:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ade82532-9128-43d9-b4f9-dec482e46651",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -744,9 +788,17 @@
     }
    ],
    "source": [
-    "# run the task\n",
-    "out = ftlist(infile='../tests/test.fits', option='T')\n",
+    "ftlist.colheader = 'no'\n",
+    "out = ftlist()\n",
     "print(out.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2466c03-a162-4376-a005-f1dc9162bc28",
+   "metadata": {},
+   "source": [
+    "Note that the line `out = ftlist()` executes without querying for parameters because it uses parameters from the previous run, which are stored in `ftlist.params` and returned in `out.params`"
    ]
   },
   {
