added examples of parameters as attributes to the nustar_example notebook

--- a/notebooks/nustar_example.ipynb
+++ b/notebooks/nustar_example.ipynb
@@ -133,7 +133,22 @@
    "id": "a8a2d53e-9500-4462-a6a7-c16d0eda808f",
    "metadata": {},
    "source": [
-    "The main cleaned event files are: `nu60001110002A01_cl.evt` and `nu60001110002B01_cl.evt` for NuSTAR modules `A` and `B`, respectively."
+    "The main cleaned event files are: `nu60001110002A01_cl.evt` and `nu60001110002B01_cl.evt` for NuSTAR modules `A` and `B`, respectively.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "Note that the same results can acheived by using the parameters as attributes of the tasks:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "nupipeline = hsp.HSPTask('nupipeline')\n",
+    "\n",
+    "nupipeline.indir = obsid\n",
+    "nupipeline.outdir = obsid + '_p/event_cl'\n",
+    "nupipeline.steminput = 'nu' + obsid\n",
+    "nupipeline(noprompt=True, verbose=True)\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -153,22 +168,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf627f61-d1b3-40a1-8d9f-5d222c4bc3af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "79e4a458-9bdf-4d30-bbb2-50bec45e4723",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+    "# write region files\n",
     "region = 'circle(21:27:46.406,+56:56:31.38,150\")'\n",
     "with open('src.reg', 'w') as fp: fp.write(region)\n",
     "\n",
@@ -251,6 +255,18 @@
    "id": "52f890a1-e4dc-48b0-a29b-752bb125095b",
    "metadata": {},
    "source": [
+    "Again, we could also have used task attributes as input parameters:\n",
+    "```python\n",
+    "\n",
+    "ftlist = hsp.HSPTask('ftlist')\n",
+    "ftlist.infile = '60001110002_p/lc/nu60001110002A01.flc'\n",
+    "ftlist.outfile = '60001110002_p/lc/nu60001110002A01.txt'\n",
+    "out = ftlist(option='T')\n",
+    "\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
     "- Now, we use `numpy` for example for read the file, and `matplotlib` to plot it.\n",
     "\n",
     "- For reading the data, we use `numpy.genfromtxt`, which allows for easy handling of missing data (`NULL` values in our case), so these are just replaced by `np.nan`\n",
