removed unneeded line in getting-started notebook

--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -704,8 +704,7 @@
    "outputs": [],
    "source": [
     "# create a task object\n",
-    "ftlist = hsp.HSPTask('ftlist')\n",
-    "result = ftlist(infile='../tests/test.fits', option='T')"
+    "ftlist = hsp.HSPTask('ftlist')"
    ]
   },
   {
