--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -29,6 +29,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "15c0d2f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('0.1.0', ['/Users/mcorcora/software/github/heasoftpy/heasoftpy'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hsp.__version__, hsp.__path__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "abc7b9d7-e461-4931-9800-b31558b50136",
    "metadata": {},
@@ -91,6 +112,12 @@
       "- Pass a dictionary of parameters:\n",
       ">>> params = {'infile':'input.fits', 'option':'T'}\n",
       ">>> result = hsp.ftlist(params)\n",
+      "\n",
+      "- When using HSPTask, the task can also be input inline:\n",
+      ">>> ftlist = hsp.HSPTask('ftlist')\n",
+      ">>> ftlist.infile = 'input.fits'\n",
+      ">>> ftlist.option = 'T'\n",
+      ">>> result = ftlist()\n",
       "\n",
       "\n",
       "All tasks take additional optional parameters:\n",
@@ -824,7 +851,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -838,7 +865,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
