updated notebook to allow output to a different directory than input directory and to update the mkf file with the KP values

--- a/notebooks/NICER processing.ipynb
+++ b/notebooks/NICER processing.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "28e7ca75",
-   "metadata": {},
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
     "os.environ['HEASOFTPYDIR']= os.path.split(os.getcwd())[0]\n",
+    "import glob\n",
     "\n",
     "import heasoftpy as hsp\n",
     "\n",
@@ -20,33 +23,99 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9a4300cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/mcorcora/tmp/nicer/4020180460/_out'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obsdir"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "4a940580",
+   "id": "e2c1e59e",
    "metadata": {},
    "source": [
     "# Set up the NICER obsid directory\n",
     "\n",
     "We'll assume the user has downloaded the NICER observation directory for OBSID ``4142010107`` in a directory called ``/Users/mcorcora/tmp/nicer``\n",
     "\n",
-    "That is the directory ``/Users/mcorcora/tmp/nicer/4142010107`` contains the ``xti``, ``auxil`` and ``hk`` directories containing the standard archived data for the observation"
+    "That is the directory ``/Users/mcorcora/tmp/nicer/4142010107`` contains the ``xti``, ``auxil`` and ``hk`` directories containing the standard archived data for the observation\n",
+    "\n",
+    "We'll put the output from nicerl2 in an output directory separate from the input directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "f6e42811",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "id": "a6654fb6",
+   "metadata": {
+    "init_cell": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cp /Users/mcorcora/tmp/nicer/4020180460/auxil/ni4020180460.mkf.gz /Users/mcorcora/tmp/nicer/nicerl2_output/4020180460_out/.\n",
+      "Setting mkf file to /Users/mcorcora/tmp/nicer/nicerl2_output/4020180460_out/ni4020180460.mkf\n",
+      "chmod u+w /Users/mcorcora/tmp/nicer/nicerl2_output/4020180460_out/ni4020180460.mkf*\n"
+     ]
+    }
+   ],
    "source": [
-    "nicerdatadir = '/Users/mcorcora/tmp/nicer'\n",
-    "nicerobsID = '4142010107'"
+    "nicerdatadir = os.path.join(os.environ['HOME'],'tmp/nicer')\n",
+    "nicerobsID = '4020180460'\n",
+    "obsdir = os.path.join(nicerdatadir, nicerobsID)\n",
+    "\n",
+    "# place cleaned output in a separate directory\n",
+    "outdir =  os.path.join(os.environ['HOME'],'tmp/nicer/','nicerl2_output/'+nicerobsID+'_out')\n",
+    "# if outdir doesn't exist, create it\n",
+    "if not os.path.exists(outdir):\n",
+    "    os.makedirs(outdir)\n",
+    "    print(f'Created {outdir}')\n",
+    "# copy the mkf file from the input directory to the outdir\n",
+    "mkf = os.path.join(obsdir,'auxil',f'ni{nicerobsID}.mkf')\n",
+    "if os.path.exists(mkf):\n",
+    "    # see if mkf is gzipped    \n",
+    "    cmd = f'cp {mkf} {outdir}/.'\n",
+    "    stat=os.system(cmd)\n",
+    "    mkf = os.path.join(outdir, os.path.split(mkf)[1])\n",
+    "    print(f'Setting mkf file to {mkf}')\n",
+    "elif os.path.exists(mkf+'.gz'):\n",
+    "    #try to copy gzipped mkf     \n",
+    "    cmd = f'cp {mkf}.gz {outdir}/.'\n",
+    "    print(cmd)\n",
+    "    os.system(cmd)\n",
+    "    mkf = os.path.join(outdir, os.path.split(mkf)[1])\n",
+    "    print(f'Setting mkf file to {mkf}')\n",
+    "    #cmd = f'gunzip -f {mkf}.gz'\n",
+    "    #print(cmd)\n",
+    "    #stat=os.system(cmd)\n",
+    "cmd = f'chmod u+w {mkf}*'\n",
+    "print(cmd)\n",
+    "stat = os.system(cmd)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "e810234a",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "4a52adf1",
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "cwd = os.getcwd()\n",
@@ -55,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d282da",
+   "id": "ab74f1c2",
    "metadata": {},
    "source": [
     "# Create the nicerl2 task"
@@ -63,25 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "5d890bd1",
+   "execution_count": 7,
+   "id": "45b698dd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start at: 2021-12-17 20:47:51\n",
-      "End at: 2021-12-17 20:47:51\n",
-      "nicerl2 took: 0.5630620988085866 seconds\n",
-      "\n",
-      "\n",
-      "Parameter clobber: value \"1\" is not of boolean type.\n",
-      "Parameter clobber: value \"1\" is not of boolean type.\n",
-      "ERROR: could not retrieve parameter 'clobber' at /Users/mcorcora/software/heasoft/headas/setup/bin/nicerl2 line 187.\n",
-      "PIL ERROR PIL_BAD_VALUE: problem converting string to other type\n",
-      "Task nicerl2 1.18 terminating with status -3040\n",
-      "\n"
+      "Start at: 2021-12-18 17:30:47\n",
+      "End at: 2021-12-18 17:33:58\n",
+      "nicerl2 took: 191.64053730200976 seconds\n"
      ]
     }
    ],
@@ -90,8 +151,14 @@
     "print(f'Start at: {tstart.iso[:19]}')\n",
     "nicerl2 = hsp.HSPTask('nicerl2')\n",
     "\n",
-    "nicerl2.clobber=True\n",
-    "resl2 = nicerl2(indir=nicerobsID, noprompt=True)\n",
+    "nicerl2.clobber=\"yes\"\n",
+    "#nicerl2.cldir=outdir\n",
+    "#nicerl2.mkffile=mkf\n",
+    "# add the KP values to the mkf file during nicerl2 processing\n",
+    "nicerl2.geomag_path=\"https://heasarc.gsfc.nasa.gov/FTP/caldb/data/gen/pcf/geomag/\"\n",
+    "nicerl2.geomag_columns=\"kp_noaa.fits(KP)\"\n",
+    "\n",
+    "resl2 = nicerl2(indir=nicerobsID, noprompt=True, cldir=outdir, mkfile=mkf)\n",
     "\n",
     "tend = Time.now()\n",
     "print(f'End at: {tend.iso[:19]}')\n",
@@ -104,29 +171,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "63373824",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resl2.returncode"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "4672c9e3",
+   "id": "a18d39e5",
    "metadata": {},
    "source": [
     "# Analyzing NICER spectra"
@@ -134,51 +180,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8286b854",
+   "execution_count": 11,
+   "id": "ed41f958",
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the on-axis rmf\n",
-    "res = quzcif(mission='nicer', instrument='xti',detector='-',\n",
-    "             filter='-',codename='matrix', date='-', time='-',expr='-')\n",
+    "res = hsp.quzcif(mission='nicer', instrument='xti',detector='-',\n",
+    "             filter='-', date='-', time='-',expr='-',codename='MATRIX')\n",
     "rmf = [x.split()[0] for x in res.output if 'nixtiref'  in x][0]\n",
     "\n",
-    "# get the on-axis arf\n"
+    "# get the on-axis arf\n",
+    "res = hsp.quzcif(mission='nicer', instrument='xti',detector='-',\n",
+    "             filter='-', date='-', time='-',expr='-',codename='SPECRESP')\n",
+    "arf = [x.split()[0] for x in res.output if 'nixtiaveonaxis'  in x][0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "69c22686",
+   "execution_count": 13,
+   "id": "4b5e68ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ERROR: outfile 4142010107/xti/event_cl/ni4142010107_0mpu0_ufa.evt exists and clobber=NO at /Users/mcorcora/software/heasoft/headas/setup/bin/nimpucal line 158.',\n",
-       " 'Task nimpucal 1.10 terminating with status -1']"
+       "('https://heasarc.gsfc.nasa.gov/FTP/caldb/data/nicer/xti/cpf/rmf/nixtiref20170601v003.rmf',\n",
+       " 'https://heasarc.gsfc.nasa.gov/FTP/caldb/data/nicer/xti/cpf/arf/nixtiaveonaxis20170601v005.arf')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resl2.output[70:72]"
+    "rmf, arf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa32177b",
+   "id": "9da9a9a8",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
