--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -37,8 +37,9 @@
     "    raise RuntimeError('Heasoft is not initalized')\n",
     "\n",
     "try:\n",
+    "    sys.path.insert(0, os.path.abspath(os.path.join(os.path.abspath(''), '..')))\n",
     "    import heasoftpy as hsp\n",
-    "excepr ImportError:\n",
+    "except ImportError:\n",
     "    raise RuntimeError('Please ensure heasoftpy is in your PYTHONPATH')\n",
     "    \n",
     "if not hasattr(hsp, 'ftlist'):\n",
@@ -52,7 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hsp.__version__, hsp.__path__"
+    "print(hsp.__version__)\n",
+    "print(hsp.__path__)"
    ]
   },
   {
@@ -343,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -357,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
