--- a/notebooks/getting-started.ipynb
+++ b/notebooks/getting-started.ipynb
@@ -43,7 +43,7 @@
     "    raise RuntimeError('Please ensure heasoftpy is in your PYTHONPATH')\n",
     "    \n",
     "if not hasattr(hsp, 'ftlist'):\n",
-    "    raise RuntimeError('Heasoftpy is not full installed. Please run the install.py script')"
+    "    raise RuntimeError('Heasoftpy is not fully installed. Please run the local-build.py script')"
    ]
   },
   {
@@ -335,19 +335,28 @@
     "checking the prameters. For example, to process the NuSTAR observation `60001111003`, we can do:\n",
     "\n",
     "```python\n",
-    "r = hsp.nupipeline(indir='60001111003', outdir='60001111003_p', steminputs='nu60001111003', \n",
+    "from heasoftpy import nustar\n",
+    "r = nustar.nupipeline(indir='60001111003', outdir='60001111003_p', steminputs='nu60001111003', \n",
     "                   noprompt=True, verbose=True)\n",
     "```\n",
     "\n",
     "this will call `nupipeline` without querying all parameters (using the defaults), and printing all progress as it runs (`verbose=True`)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4225012b-f805-430e-9fc5-9bbda0db6a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "(heasoft)",
    "language": "python",
-   "name": "python3"
+   "name": "heasoft"
   },
   "language_info": {
    "codemirror_mode": {
@@ -359,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
